--- a/frontend/src/components/Register.css
+++ b/frontend/src/components/Register.css
@@ -157,6 +157,7 @@ html,
   opacity: 0;
   animation: fadeInUp 0.6s ease forwards;
   animation-delay: 0.4s;
+  width: 50vh;
 }
 
 .form-group {
